removing Myriad Pro from the CSS for various reasons, one being that there are a number of overlapping issues in Firefox. The other being that most people don't have this font anyways so we shouldn't really rely on it as our default font. fixes #4429
git-svn-id: http://svn.dojotoolkit.org/src/dojo/trunk@10759 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/resources/dojo.css
+++ b/resources/dojo.css
@@ -91,7 +91,7 @@ abbr, acronym {
 	Default: 13px, specified by the YUI imports.
 */
 body { 
-	font: 13px "Myriad Pro",Myriad,Arial,Helvetica,clean,sans-serif; 
+	font: 13px Myriad,Arial,Helvetica,clean,sans-serif; 
 	*font-size: small;
 	*font: x-small;
 }
